--- a/Assets/CSS/style.css
+++ b/Assets/CSS/style.css
@@ -1,7 +1,7 @@
 
 body {
     font-family: Arial, sans-serif;
-    margin-top: 20px;
+    /* margin-top: 20px; */
 }
 
 .background-image {
@@ -12,10 +12,12 @@ body {
   background-repeat: no-repeat;
 }
 
+/*
 .container {
     max-width: 300px;
 }
-
+*/
+/* 
 .card-container {
   position: fixed;
   top:20%;
@@ -27,16 +29,23 @@ body {
   border: 1px solid #1d1c1c;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   padding: 20px;
-  display: none; /* Initially hidden */
-}
+  display: none; 
+} */
 
-.card-container.show {
+/* .card-container.show {
   display: block;
-}
+} */
 
 .card-body {
   cursor: move; /* Change cursor to indicate draggable area */
 }
+/* 
+#weather-form{
+  flex-direction: row;
+  flex-wrap: nowrap;
+  border: 1px solid black;
+} */
+
 /* not sure how to get media query to work
 images are not resizing to fit smaller screens
 
