--- a/Assets/CSS/style.css
+++ b/Assets/CSS/style.css
@@ -4,12 +4,18 @@ body {
     /* margin-top: 20px; */
 }
 
+#submit {
+  text-align: left !important;
+  padding: 0;
+  width:200px;
+
+}
 .background-image {
     
     background-size: cover;
     background-position: center;
     height: 100vh;
-  background-repeat: no-repeat;
+    background-repeat: no-repeat;
 }
 
 /*
