--- a/Assets/CSS/style.css
+++ b/Assets/CSS/style.css
@@ -24,8 +24,8 @@ body {
     max-width: 300px;
 }
 */
-/* 
-.card-container {
+
+/* .card-container {
   position: fixed;
   top:20%;
   left: 20%;
@@ -37,7 +37,7 @@ body {
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   padding: 20px;
   display: none; 
-} */
+}  */
 
 /* .card-container.show {
   display: block;
