--- a/Assets/CSS/style.css
+++ b/Assets/CSS/style.css
@@ -51,6 +51,26 @@ body {
   cursor: move; /* Change cursor to indicate draggable area */
 }
 
+.modal {
+  display: none; 
+  position: fixed; 
+  z-index: 1; 
+  left: 0;
+  top: 0;
+  width: 100%; 
+  height: 100%; 
+  overflow: auto; 
+  background-color: rgb(0,0,0); 
+  background-color: rgba(0,0,0,0.4); 
+}
+
+.modal-content {
+  background-color: #fefefe;
+  margin: 15% auto; 
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%; 
+}
 
 .card-bg {
   background-size: cover; /* Ensures the image covers the card area */
@@ -94,3 +114,29 @@ images are not resizing to fit smaller screens
     }
   }
 */
+
+.navitems{
+  width:100%;
+  display: flex;
+  justify-content: space-between;
+}
+
+footer{
+  position: fixed;
+  bottom:0;
+}
+
+.title{
+  position:relative;
+  width:60%;
+  margin-left: 0%;
+  padding-left: 0%;
+}
+
+
+.sub-title{
+  position:absolute;
+  right:0;
+  bottom:0;
+  font-style: italic;
+}
